ublog/css: Prevent linebreak inside view count

--- a/ui/site/css/ublog/_post.scss
+++ b/ui/site/css/ublog/_post.scss
@@ -77,6 +77,9 @@
       }
     }
   }
+  &__views {
+    white-space: nowrap;
+  }
   &__image {
     @extend %box-neat-force;
     width: 100%;
